--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
   <body>
     <!-- Start Header -->
     <header>
+      
       <div id="menu-bar" class="fa-solid fa-bars"></div>
-      <a href="#" class="header__logo">
+      <a href="#home" class="header__logo">
         <img class="header__img" src="/images/logo.png" alt="" />
         <p class="header__title">TRAVEL THE WORLD</p>
       </a>
       <nav class="navbar">
         <div class="navbar__links">
           <a href="#home">Home</a>
-          <a href="#book">Book</a>
+          <a href="booking.html">Book</a>
           <a href="#packages">Packages</a>
           <a href="#destination">Top Destination</a>
         </div>
@@ -58,6 +59,7 @@
     </div>
     <!-- End Login Form Container -->
     <!-- Start Home Section -->
+    
     <section class="home container" id="home">
       <div class="home__content">
         <h1 class="home__title">
@@ -67,8 +69,8 @@
           <br />
           DREAMING
         </h1>
-        <p class="home__text">Discover New Places With Us, Adventure Awaits</p>
-        <a href="#" class="btn">Discover More</a>
+        <p class="home__text">Discover The World With Us</p>
+        <a href="booking.html" class="btn">Book Now</a>
       </div>
       <div class="home__controls">
         <svg
@@ -138,7 +140,7 @@
 
     <!-- End Home Section -->
     <!-- Start Book Section -->
-    <section class= "book container" id= 'book'>
+    <!-- <section class= "book container" id= 'book'>
       <h2 class = "heading">
         <span>b</span>
         <span>o</span>
@@ -160,7 +162,7 @@
           </div>
           <div class="inputBox">
             <h3>How Many</h3>
-            <input type="number" placeholder = "number of people">
+            <input type="number" placeholder="number of people" min="0" max="10">
           </div>
           <div class="inputBox">
             <h3>Arrivals</h3>
@@ -173,7 +175,7 @@
           <input type="submit" class = 'btn' value="Book Now" />
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Book Section -->
     <!-- Start Package section  -->
     <section class="packages container" id="packages">
@@ -194,7 +196,7 @@
           </div>
           <div class="packages__box--content-item">
             <h4><i class="fas fa-map-marker-alt"></i>Virginia Beach</h4>
-            <p>bfsaafdgsfbsfaafdsbfsdfa</p>
+            <p>Come soak up the California sunshine and experience the eclectic vibe of Venice Beach, where you'll find colorful street performers, funky shops, and a lively boardwalk scene.</p>
             <div class="reviews">
               <i class="fas fa-star"></i>
               <span class="rate">5</span>
@@ -202,7 +204,7 @@
               <div class="price">$80.00
               <span>$120.00</span>
             </div>
-            <a href="#" class="btn">Book Now</a>
+            <a href="booking.html" class="btn">Book Now</a>
           </div>
 
         </div>
@@ -211,8 +213,8 @@
             <img src="images/Hạ Long, Vietnam.jpg" alt="" class="sr">
           </div>
           <div class="packages__box--content-item">
-            <h4><i class="fas fa-map-marker-alt"></i>Virginia Beach</h4>
-            <p>bfsaafdgsfbsfaafdsbfsdfa</p>
+            <h4><i class="fas fa-map-marker-alt"></i>Ha Long, Vietnam</h4>
+            <p>Immerse yourself in the breathtaking natural beauty of Hạ Long Bay, a UNESCO World Heritage Site with towering limestone cliffs rising from emerald green waters.</p>
             <div class="reviews">
               <i class="fas fa-star"></i>
               <span class="rate">5</span>
@@ -220,7 +222,7 @@
               <div class="price">$80.00
               <span>$120.00</span>
             </div>
-            <a href="#" class="btn">Book Now</a>
+            <a href="booking.html" class="btn">Book Now</a>
           </div>
 
         </div>
@@ -229,8 +231,8 @@
             <img src="images/lake thun.jpg" alt="" class="sr">
           </div>
           <div class="packages__box--content-item">
-            <h4><i class="fas fa-map-marker-alt"></i>Virginia Beach</h4>
-            <p>bfsaafdgsfbsfaafdsbfsdfa</p>
+            <h4><i class="fas fa-map-marker-alt"></i>Lake thun</h4>
+            <p>Explore the stunning alpine landscape of Switzerland's Lake Thun, with crystal clear waters, snow-capped peaks, and charming lakeside towns.</p>
             <div class="reviews">
               <i class="fas fa-star"></i>
               <span class="rate">5</span>
@@ -238,7 +240,7 @@
               <div class="price">$80.00
               <span>$120.00</span>
             </div>
-            <a href="#" class="btn">Book Now</a>
+            <a href="booking.html" class="btn">Book Now</a>
           </div>
 
         </div>
@@ -247,8 +249,8 @@
             <img src="images/Times Square.jpg" alt="" class="sr">
           </div>
           <div class="packages__box--content-item">
-            <h4><i class="fas fa-map-marker-alt"></i>Virginia Beach</h4>
-            <p>bfsaafdgsfbsfaafdsbfsdfa</p>
+            <h4><i class="fas fa-map-marker-alt"></i>Times Square</h4>
+            <p>Get swept up in the bright lights and energy of Times Square, the heart of NYC's theater district. Take in a Broadway show in this iconic, bustling destination.</p>
             <div class="reviews">
               <i class="fas fa-star"></i>
               <span class="rate">5</span>
@@ -256,7 +258,7 @@
               <div class="price">$80.00
               <span>$120.00</span>
             </div>
-            <a href="#" class="btn">Book Now</a>
+            <a href="booking.html" class="btn">Book Now</a>
           </div>
 
         </div>
@@ -265,8 +267,8 @@
             <img src="images/Santorini, Greece.jpg" alt="" class="sr">
           </div>
           <div class="packages__box--content-item">
-            <h4><i class="fas fa-map-marker-alt"></i>Virginia Beach</h4>
-            <p>bfsaafdgsfbsfaafdsbfsdfa</p>
+            <h4><i class="fas fa-map-marker-alt"></i>Santorini, Greece</h4>
+            <p>Step into a postcard-perfect world on the island of Santorini, where white-washed buildings cling to dramatic cliffs overlooking the sparkling Aegean Sea. Enjoy fresh seafood, local wine, and unforgettable sunsets in this idyllic Mediterranean paradise.</p>
             <div class="reviews">
               <i class="fas fa-star"></i>
               <span class="rate">5</span>
@@ -274,7 +276,7 @@
               <div class="price">$80.00
               <span>$120.00</span>
             </div>
-            <a href="#" class="btn">Book Now</a>
+            <a href="booking.html" class="btn">Book Now</a>
           </div>
 
         </div>
@@ -283,8 +285,8 @@
             <img src="images/AB, Canada.jpg" alt="" class="sr">
           </div>
           <div class="packages__box--content-item">
-            <h4><i class="fas fa-map-marker-alt"></i>Virginia Beach</h4>
-            <p>bfsaafdgsfbsfaafdsbfsdfa</p>
+            <h4><i class="fas fa-map-marker-alt"></i>Alberta, Canada</h4>
+            <p>Get back to nature in the stunning province of Alberta, Canada, home to the majestic Canadian Rockies and the pristine wilderness of Banff National Park. Go hiking, skiing, or wildlife watching in this rugged and beautiful destination.</p>
             <div class="reviews">
               <i class="fas fa-star"></i>
               <span class="rate">5</span>
@@ -292,7 +294,7 @@
               <div class="price">$80.00
               <span>$120.00</span>
             </div>
-            <a href="#" class="btn">Book Now</a>
+            <a href="booking.html" class="btn">Book Now</a>
           </div>
 
         </div>
@@ -307,10 +309,10 @@
         <div class="destination__content">
           <h2>Egypt</h2>
           <h3>Must Visit Summer Destination</h3>
-          <p> gafsgfdbfgsfearwegfdndbfsfawafsgfdbfsdfasdfdsbdfsd
-            vbfdfsdfasdfsfbdfbdfvsdvfdbf vc.
+          <p> 
+            Egypt is a land of ancient wonders, awe-inspiring monuments, and a rich cultural heritage that has captivated visitors for centuries. Located in northeastern Africa and bordered by the Mediterranean Sea to the north and the Red Sea to the east, Egypt offers a diverse array of landscapes and experiences that are sure to leave a lasting impression on any traveler. At the heart of Egypt lies the mighty Nile River, which has sustained life and civilization in the region for thousands of years. Along its banks, visitors can explore a wealth of historic sites and ancient temples, including the magnificent pyramids of Giza, the Valley of the Kings, and the temples of Luxor and Karnak.
           </p>
-          <a href="#" class="btn">Read More</a>
+          <a href="booking.html" class="btn">Reserve Seat</a>
 
         </div>
         <div class="destination__image">
