--- a/signup.html
+++ b/signup.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Travel Planning System - Signup</title>
     <link rel="stylesheet" type="text/css" href="signupstyle.css">
   </head>
@@ -11,22 +13,22 @@
     </header>
     <main>
       <form>
-        <h2>Create an account</h2>
+        <h2 title="Create an account">Create an account</h2>
         <div class="form-group">
           <label for="email">Email:</label>
-          <input type="email" id="email" placeholder="example@gmail.com" name="email" required>
+          <input type="email" id="email" placeholder="Example@gmail.com" name="email" aria-label="Email" required>
         </div>
         <div class="form-group">
           <label for="password">Password:</label> 
-          <input type="password" id="password" name="password" required>
+          <input type="password" id="password" placeholder="Password" name="password" aria-label="Password" required>
         </div>
         <div class="form-group">
           <label for="confirm-password">Confirm Password:</label>
-          <input type="password" id="confirm-password" name="confirm-password" required>
+          <input type="password" id="confirm-password" name="confirm-password" aria-label="Confirm password" required>
           <div id="error-message"></div>
-                  </div>
+        </div>     
         <button type="submit">Sign up</button>
-        <p>Already have an account? <a href="index.html">Login here!</a></p>
+        <p>Already have an account? <a href="https://example.com/index.html">Login here!</a></p>
       </form>
     </main>
     <footer>
