--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
           <div id="error-message"></div>
         </div>     
         <button type="submit">Sign up</button>
-        <p>Already have an account? <a href="/index.html">Login here!</a></p>
+        <p>Already have an account? <a href="index.html">Login here!</a></p>
       </form>
     </main>
     <footer>
